welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value color
    while (getCouleurSol()== color.green) {
                             ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
    while (getCouleurSol()== color.green) {
    ^