welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    while (getCouleurSol()== color.green) {
    	avance()
    }
}        
